fix: adjust z-index of canvas and image

--- a/style.css
+++ b/style.css
@@ -7,7 +7,6 @@ html {
   height: 100%;
   margin: 0;
   font-family: "Inter", sans-serif;
-  background-color: #000000;
 }
 
 .bg {
@@ -25,7 +24,7 @@ html {
   width: 100%;
   height: 100%;
   object-fit: cover;
-  z-index: -1;
+  z-index: 1;
 }
 
 #canvas {
@@ -34,7 +33,7 @@ html {
   left: 0;
   width: 100%;
   height: 100%;
-  z-index: -2;
+  z-index: 0;
 }
 
 #bg-img {
